--- a/index.html
+++ b/index.html
@@ -6,22 +6,28 @@
     <link rel="icon" href="scss/assets/building-fill-gear.svg" type="image/svg+xml">
     <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="style.css">
+
+    <!-- add new fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+    
     <title>Document</title>
 </head>
 <body>
     <header class="header">
         <div class="header__wrapper">
             <div class="header__content">
-                <p class="header__p-slogan">
-                    Ателье балконов -<br>
-                    компания, которая оказывает профессиональные услуги<br>
-                    по остеклению балконов и лоджий в<br>
+                <p class="header__p-slogan header__p-slogan_font-thin">
+                    <span class="header__span-name">Ателье балконов -</span><br>
+                    компания, которая оказывает профессиональные <br>
+                    услуги по остеклению балконов и лоджий в<br>
                     Братске и Братском районе.
                 </p>
                 <div class="header__div">
                     <div class="header__point">
                         <img src="scss/assets/header/window.svg" alt="window">
-                        <p class="header__p-reason">
+                        <p class="header__p-reason header__p-reason_font-roboto">
                             Современные окна<br>
                             и балконные конструкции<br>
                             по доступным ценам
@@ -29,14 +35,14 @@
                     </div>
                     <div class="header__point">
                         <img src="scss/assets/header/award.svg" alt="award">
-                        <p class="header__p-reason">
+                        <p class="header__p-reason header__p-reason_font-roboto">
                             Квалифицированный<br>
                             подход к решению задач
                         </p>
                     </div>
                     <div class="header__point">
                         <img src="scss/assets/header/list.svg" alt="list">
-                        <p class="header__p-reason">
+                        <p class="header__p-reason header__p-reason_font-roboto">
                             Гарантия<br>
                             высочайшего качества<br>
                             нашей продукции
@@ -48,12 +54,12 @@
         <nav class="header__nav">
             <div class="header__icon-div">
                 <img src="scss/assets/header/icon.svg" alt="icon">
-                <span>Ателье балконов</span>
+                <span class="header__span header__span_font-oswald">Ателье<br>балконов</span>
             </div>
             <div class="header__div-buttons">
-                <a href="" class="header__button">О компании</a>
-                <a href="" class="header__button">Портфолио</a>
-                <a href="" class="header__button">Контакты</a>
+                <a href="" class="header__button header__button_font-roboto header__button_font-roboto_active">О компании</a>
+                <a href="" class="header__button header__button_font-roboto header__button_font-roboto_active">Портфолио</a>
+                <a href="" class="header__button header__button_font-roboto header__button_font-roboto_active">Контакты</a>
             </div>
         </nav>
     </header>
