build: create new dir config

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     
-    <title>Document</title>
+    <title>Ателье балконов</title>
 </head>
 <body>
     <header class="header">
@@ -57,9 +57,9 @@
                 <span class="header__span header__span_font-oswald">Ателье<br>балконов</span>
             </div>
             <div class="header__div-buttons">
-                <a href="" class="header__button header__button_font-roboto header__button_font-roboto_active">О компании</a>
-                <a href="" class="header__button header__button_font-roboto header__button_font-roboto_active">Портфолио</a>
-                <a href="" class="header__button header__button_font-roboto header__button_font-roboto_active">Контакты</a>
+                <button><a href="" class="header__button header__button_font-roboto">О компании</a></button>
+                <button><a href="" class="header__button header__button_font-roboto">Портфолио</a></button>
+                <button><a href="" class="header__button header__button_font-roboto">Контакты</a></button>
             </div>
         </nav>
     </header>
