feat: start to create new page

--- a/index.html
+++ b/index.html
@@ -73,6 +73,53 @@
         </nav>
     </header>
 
+    <main class="main">
+        <section class="section-company">
+            <h2 class="section-company__h2">О компании</h2>
+            <div class="section-company__pane">
+                <button class="button"><a href="" class="section-company_a">Описание</a></button>
+                <button class="button"><a href="" class="section-company_a">Как мы работаем</a></button>
+                <button class="button"><a href="" class="section-company_a">Отзывы</a></button>
+                <button class="button"><a href="" class="section-company_a">Сертификаты</a></button>
+            </div>
+            <div class="section-company__wrapper">
+                <div class="section-company__wrapper-text">
+                    <div class="header__icon-div">
+                        <img src="scss/assets/header/icon.svg" alt="icon">
+                        <span class="header__span header__span_font-oswald">Ателье<br>балконов</span>
+                    </div>
+                    <div class="section-company__p-block">
+                        <p class="section-company__p">
+                            Название компании говорит само за себя и свидетельствует о незаурядном и творческом подходе к работе.
+                        </p>
+                        <p class="section-company__p">
+                            За годы своего существования компания накопила бесценный опыт в этой сфере и готова поделиться этим опытом со своими клиентами.
+                        </p>
+                        <p class="section-company__p">
+                            Девиз нашей компании — качество и надёжность.
+                        </p>
+                    </div>
+                </div>
+                <div class="section-company__wrapper-video">
+                    <img src="scss/assets/main/video.jpg" alt="video" class="section-company__video">
+                </div>
+            </div>
+        </section>
+        <section class="section-cases">
+            <h2 class="section-cases__h2">Портфолио</h2>
+            <div class="section-cases__wrapper">
+                <img src="scss/assets/main/left-arrow.svg" alt="left-arrow" class="section-cases__arrow">
+                <div class="section-cases__wrapper">
+                    <img src="scss/assets/main/photo1.jpg" alt="photo1" class="section-cases__photo">
+                    <img src="scss/assets/main/photo2.jpg" alt="photo2" class="section-cases__photo">
+                    <img src="scss/assets/main/photo3.jpg" alt="photo3" class="section-cases__photo">
+                    <img src="scss/assets/main/photo4.jpg" alt="photo4" class="section-cases__photo">
+                </div>
+                <img src="scss/assets/main/right-arrow.svg" alt="right-arrow" class="section-cases__arrow">
+            </div>
+        </section>
+    </main>
+
     <script>
         document.addEventListener('DOMContentLoaded', () => {
         const menuToggle = document.querySelector('.menu-toggle');
