--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
 
     <footer class="footer">
         <section class="credit">
-            <img src="scss/assets/footer/man.jpg" alt="man" class="man">
+            <img src="scss/assets/footer/man.png" alt="man" class="man">
             <section class="contact">
                 <div class="icon">
                     <div class="header__icon-div">
