feat: fullfill desktop version without buttons

--- a/index.html
+++ b/index.html
@@ -52,22 +52,22 @@
             </div>
         </div>
         <nav class="header__nav">
-            <div class="header__icon-div">
+            <div class="logo">
                 <img src="scss/assets/header/icon.svg" alt="icon">
                 <span class="header__span header__span_font-oswald">Ателье<br>балконов</span>
             </div>
             <div class="header__div-buttons">
-                <button><a href="" class="header__button header__button_font-roboto">О компании</a></button>
-                <button><a href="" class="header__button header__button_font-roboto">Портфолио</a></button>
-                <button><a href="" class="header__button header__button_font-roboto">Контакты</a></button>
+                <button><a href="#company" class="header__button header__button_font-roboto">О компании</a></button>
+                <button><a href="#cases" class="header__button header__button_font-roboto">Портфолио</a></button>
+                <button><a href="#contacts" class="header__button header__button_font-roboto">Контакты</a></button>
             </div>
 
             <nav class="menu">
                 <button class="menu-toggle">Меню</button>
                 <ul class="menu-list">
-                  <li><a href="#">О компании</a></li>
-                  <li><a href="#">Портфолио</a></li>
-                  <li><a href="#">Контакты</a></li>
+                  <li><a href="#company">О компании</a></li>
+                  <li><a href="#cases">Портфолио</a></li>
+                  <li><a href="#contacts">Контакты</a></li>
                 </ul>
             </nav>
         </nav>
@@ -75,20 +75,20 @@
 
     <main class="main">
         <section class="section-company">
-            <h2 class="h2 section-company__h2">О компании</h2>
-            <div class="pane section-company__pane">
+            <h2 class="h2 section-company__h2" id="company">О компании</h2>
+            <div class="panel section-company__panel">
                 <button class="button"><a href="" class="section-company_a">Описание</a></button>
                 <button class="button"><a href="" class="section-company_a">Как мы работаем</a></button>
                 <button class="button"><a href="" class="section-company_a">Отзывы</a></button>
-                <button class="button"><a href="" class="section-company_a">Сертификаты</a></button>
+                <!-- <button class="button"><a href="" class="section-company_a">Сертификаты</a></button> -->
             </div>
             <div class="section-company__wrapper">
                 <div class="section-company__wrapper-text">
-                    <div class="header__icon-div">
+                    <div class="logo">
                         <img src="scss/assets/header/icon.svg" alt="icon">
                         <span class="header__span header__span_font-oswald">Ателье<br>балконов</span>
                     </div>
-                    <div class="section-company__p-block">
+                    <div class="section-company__p-container">
                         <p class="section-company__p">
                             Название компании говорит само за себя и свидетельствует о незаурядном и творческом подходе к работе.
                         </p>
@@ -106,7 +106,7 @@
             </div>
         </section>
         <section class="section-cases">
-            <h2 class="h2 section-cases__h2">Портфолио</h2>
+            <h2 class="h2 section-cases__h2" id="cases">Портфолио</h2>
             <div class="section-cases__wrapper">
                 <img src="scss/assets/main/left-arrow.svg" alt="left-arrow" class="section-cases__arrow">
                 <div class="section-cases__wrapper-photo">
@@ -121,24 +121,38 @@
     </main>
 
     <footer class="footer">
-        <section class="credit">
+        <section class="footer__credit">
             <img src="scss/assets/footer/man.png" alt="man" class="man">
-            <section class="contact">
-                <div class="icon">
-                    <div class="header__icon-div">
-                        <img src="scss/assets/header/icon.svg" alt="icon">
-                        <span class="header__span header__span_font-oswald">Ателье<br>балконов</span>
-                    </div>
-                    <div class="phone">
+            <div class="footer__credit-container">
+                <h2 class="h2 footer__h2">Внутренняя рассрочка</h2>
+                <ul class="condition-list footer__condition-list">
+                    <li class="li footer__li">Первый взнос <span class="footer__span">50%</span></li>
+                    <li class="li footer__li">Переплата по рассрочке <span class="footer__span">0%</span></li>
+                    <li class="li footer__li">Сроком до <span class="footer__span">3 месяцев</span></li>
+                </ul>
+            </div>
+        </section>
+        <section class="contact">
+            <div class="icon">
+                <div class="logo">
+                    <img src="scss/assets/header/icon.svg" alt="icon">
+                    <span class="header__span header__span_font-oswald">Ателье<br>балконов</span>
+                </div>
+                <span class="contact__span">© ООО “Ателье балконов”, 1998-2025</span>
+            </div>
+                <div class="phone" id="contacts">
+                    <div class="phone-wrapper">
                         <img src="scss/assets/footer/phone.svg" alt="phone" class="phone">
-                        <span class="phone">+73953266098</span>
+                        <span class="phone-span">+73953266098</span>
+                    </div>
+                    <div class="mail-wrapper">
                         <img src="scss/assets/footer/mail.svg" alt="mail" class="mail">
                         <span class="mail">metallica923@gmail.com</span>
                     </div>
-                    <span class="copyright">Пользовательское соглашение</span>
                 </div>
-            </section>
+                <span class="copyright">Пользовательское соглашение</span>
         </section>
+        
     </footer>
     <script>
         document.addEventListener('DOMContentLoaded', () => {
