build: create new config in accordance with bem notation

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="scss/assets/building-fill-gear.svg" type="image/svg+xml">
+    <link rel="icon" href="scss/assets/global_img/logo.svg" type="image/svg+xml">
     <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="style.css">
 
@@ -26,7 +26,7 @@
                 </p>
                 <div class="header__div">
                     <div class="header__point">
-                        <img src="scss/assets/header/window.svg" alt="window">
+                        <img src="assets/scss/header/header__assets/window.svg" alt="window">
                         <p class="header__p-reason header__p-reason_font-roboto">
                             Современные окна<br>
                             и балконные конструкции<br>
@@ -34,14 +34,14 @@
                         </p>
                     </div>
                     <div class="header__point">
-                        <img src="scss/assets/header/award.svg" alt="award">
+                        <img src="assets/scss/header/header__assets/award.svg" alt="award">
                         <p class="header__p-reason header__p-reason_font-roboto">
                             Квалифицированный<br>
                             подход к решению задач
                         </p>
                     </div>
                     <div class="header__point">
-                        <img src="scss/assets/header/list.svg" alt="list">
+                        <img src="assets/scss/header/header__assets/list.svg" alt="list">
                         <p class="header__p-reason header__p-reason_font-roboto">
                             Гарантия<br>
                             высочайшего качества<br>
@@ -53,8 +53,8 @@
         </div>
         <nav class="header__nav">
             <div class="logo">
-                <img src="scss/assets/header/icon.svg" alt="icon">
-                <span class="header__span header__span_font-oswald">Ателье<br>балконов</span>
+                <img src="assets/global_img/logo.svg" alt="icon">
+                <span class="logo__span">Ателье<br>балконов</span>
             </div>
             <div class="header__div-buttons">
                 <button><a href="#company" class="header__button header__button_font-roboto">О компании</a></button>
@@ -74,7 +74,7 @@
     </header>
 
     <main class="main">
-        <section class="section-company">
+        <section class="section section-company">
             <h2 class="h2 section-company__h2" id="company">О компании</h2>
             <div class="panel section-company__panel">
                 <button class="button"><a href="" class="section-company_a">Описание</a></button>
@@ -85,8 +85,8 @@
             <div class="section-company__wrapper">
                 <div class="section-company__wrapper-text">
                     <div class="logo">
-                        <img src="scss/assets/header/icon.svg" alt="icon">
-                        <span class="header__span header__span_font-oswald">Ателье<br>балконов</span>
+                        <img src="assets/global_img/logo.svg" alt="icon">
+                        <span class="logo__span">Ателье<br>балконов</span>
                     </div>
                     <div class="section-company__p-container">
                         <p class="section-company__p">
@@ -101,28 +101,28 @@
                     </div>
                 </div>
                 <div class="section-company__wrapper-video">
-                    <img src="scss/assets/main/video.jpg" alt="video" class="section-company__video">
+                    <img src="assets/scss/main/main__assets/video.jpg" alt="video" class="section-company__video">
                 </div>
             </div>
         </section>
-        <section class="section-cases">
+        <section class="section section-cases">
             <h2 class="h2 section-cases__h2" id="cases">Портфолио</h2>
             <div class="section-cases__wrapper">
-                <img src="scss/assets/main/left-arrow.svg" alt="left-arrow" class="section-cases__arrow">
+                <img src="assets/scss/main/main__assets/left-arrow.svg" alt="left-arrow" class="section-cases__arrow">
                 <div class="section-cases__wrapper-photo">
-                    <img src="scss/assets/main/photo1.jpg" alt="photo1" class="section-cases__photo">
-                    <img src="scss/assets/main/photo2.jpg" alt="photo2" class="section-cases__photo">
-                    <img src="scss/assets/main/photo3.jpg" alt="photo3" class="section-cases__photo">
-                    <img src="scss/assets/main/photo4.jpg" alt="photo4" class="section-cases__photo">
+                    <img src="assets/scss/main/main__assets/photo1.jpg" alt="photo1" class="section-cases__photo">
+                    <img src="assets/scss/main/main__assets/photo2.jpg" alt="photo2" class="section-cases__photo">
+                    <img src="assets/scss/main/main__assets/photo3.jpg" alt="photo3" class="section-cases__photo">
+                    <img src="assets/scss/main/main__assets/photo4.jpg" alt="photo4" class="section-cases__photo">
                 </div>
-                <img src="scss/assets/main/right-arrow.svg" alt="right-arrow" class="section-cases__arrow">
+                <img src="assets/scss/main/main__assets/right-arrow.svg" alt="right-arrow" class="section-cases__arrow">
             </div>
         </section>
     </main>
 
     <footer class="footer">
         <section class="footer__credit">
-            <img src="scss/assets/footer/man.png" alt="man" class="man">
+            <img src="assets/scss/footer/footer__assets/man.png" alt="man" class="man">
             <div class="footer__credit-container">
                 <h2 class="h2 footer__h2">Внутренняя рассрочка</h2>
                 <ul class="condition-list footer__condition-list">
@@ -135,18 +135,18 @@
         <section class="contact">
             <div class="icon">
                 <div class="logo">
-                    <img src="scss/assets/header/icon.svg" alt="icon">
-                    <span class="header__span header__span_font-oswald">Ателье<br>балконов</span>
+                    <img src="assets/global_img/logo.svg" alt="icon">
+                    <span class="logo__span">Ателье<br>балконов</span>
                 </div>
                 <span class="contact__span">© ООО “Ателье балконов”, 1998-2025</span>
             </div>
                 <div class="phone" id="contacts">
                     <div class="phone-wrapper">
-                        <img src="scss/assets/footer/phone.svg" alt="phone" class="phone">
+                        <img src="assets/scss/footer/footer__assets/phone.svg" alt="phone" class="phone">
                         <span class="phone-span">+73953266098</span>
                     </div>
                     <div class="mail-wrapper">
-                        <img src="scss/assets/footer/mail.svg" alt="mail" class="mail">
+                        <img src="assets/scss/footer/footer__assets/mail.svg" alt="mail" class="mail">
                         <span class="mail">metallica923@gmail.com</span>
                     </div>
                 </div>
