feat: continue dev adaptation for mobile

--- a/index.html
+++ b/index.html
@@ -180,9 +180,10 @@
                     <img src="assets/global_img/logo.svg" alt="icon">
                     <span class="logo__span">Ателье<br>балконов</span>
                 </div>
-                <span class="contact__span">© ООО “Ателье балконов”, 1998-2025</span>
+                <span class="contact__span">ООО “Ателье балконов”, 1998-2025</span>
             </div>
-                <div class="phone" id="contacts">
+            <img src="assets/scss/footer/footer__assets/copyright.svg" alt="copyright" class="logo_copy">
+                <div class="phone">
                     <div class="phone-wrapper">
                         <img src="assets/scss/footer/footer__assets/phone.svg" alt="phone" class="phone">
                         <span class="phone-span">+7 (395) 326-60-98</span>
