feat: filfill adaptation for mobile devises

--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
                 </ul>
             </div>
         </section>
-        <section class="contact">
+        <section class="contact" id="contacts">
             <div class="icon">
                 <div class="logo">
                     <img src="assets/global_img/logo.svg" alt="icon">
@@ -206,7 +206,7 @@
     <script src="assets/scss/header/header.js"></script> 
 
     <!-- Кнопки в разделе компания -->
-    <script src="assets/scss/main/main.js"></script>
+    <script src="assets/scss/main/main_buttons.js"></script>
 
     <!-- Слайдер -->
     <script src="assets/scss/main/main_circ.js"></script>
