fix: polishing little things

--- a/index.html
+++ b/index.html
@@ -17,6 +17,11 @@
 <body>
     <header class="header">
         <div class="header__wrapper">
+            <!-- <div class="header__wrapper-theme">
+                <button class="header__theme-button theme-button light" onclick="return false;">Светлая</button>
+                <button class="header__theme-button theme-button dark" onclick="return false;">Тёмная</button>
+            </div> -->
+            
             <div class="header__content">
                 <p class="header__p-slogan header__p-slogan_font-thin">
                     <span class="header__span-name">Ателье балконов -</span><br>
